--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,16 +7,25 @@
 nav {
   background-color: steelblue;
   padding: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 nav a {
   color: white;
   display: block;
   padding: 20px;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700;
 }
 
 h1 {
   color: steelblue;
+  padding: 12px 0;
+  margin-bottom: 12px;
+  border-bottom: 1px solid steelblue;
 }
 
 main img {
@@ -33,13 +42,16 @@ p {
 }
 
 main {
-  max-width: 840px;
+  grid-column: 2/3;
+  margin: 1rem;
 }
 
 aside {
   width: 20rem;
   text-align: center;
   position: relative;
+  grid-column: 1/2;
+  grid-row: 1/2;
 }
 
 aside img {
@@ -58,6 +70,18 @@ footer {
   margin-top: 15px;
   border-top: 1px solid #000;
   text-align: center;
+}
+
+header,
+.grid,
+footer {
+  max-width: 840px;
+  margin: 0 auto;
+}
+
+.grid {
+  display: grid;
+  align-items: center;
 }
 
 /* Class Selectors */
