--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -31,14 +31,28 @@ h6 {
   color: var(--primary-color);
 }
 
-p {
+header {
+  margin: 1rem 6rem;
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  align-items: center;
+  gap: 80px;
 }
 
-nav a {
+.navigation {
+  display: flex;
+  list-style: none;
+}
+
+.navigation li {
+  flex: 1 1 100%;
+}
+
+.navigation a {
   display: block;
   color: var(--nav-link-color);
-  text-decoration: none;
   padding: 1rem;
+  text-decoration: none;
 }
 
 .hero {
